feat(tui): TuiGameLobbyView and fixes to other views